--- a/templates/subscription/new.html.twig
+++ b/templates/subscription/new.html.twig
@@ -1,27 +1,28 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container">
-    <h1>Sélectionner votre forfait</h1>
+	<div class="container">
+		<h1>Sélectionner votre forfait</h1>
 
-    {{ form_start(form) }}
-    <div class="form-group">
-        {{ form_label(form.plan, null, {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.plan, {'attr': {'class': 'form-control'}}) }}
-    </div>
+		{{ form_start(form) }}
+		<div class="form-group">
+			{{ form_label(form.plan, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.plan, {'attr': {'class': 'form-control'}}) }}
+		</div>
 
-    <div class="form-group">
-        {{ form_label(form.promoCode, null, {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.promoCode, {'attr': {'class': 'form-control'}}) }}
-    </div>
+		<div class="form-group">
+			{{ form_label(form.promoCode, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.promoCode, {'attr': {'class': 'form-control'}}) }}
+		</div>
 
-    {{ form_rest(form) }}
+		{{ form_rest(form) }}
 
-    <button type="submit" class="btn btn-primary">Réserver et payer</button>
-    {{ form_end(form) }}
-
-    <div class="mt-3">
-        <a href="{{ path('plan_new') }}" class="btn btn-secondary">Ajouter un nouveau forfait</a>
-    </div>
-</div>
+		<button type="submit" class="btn btn-primary mt-2">Réserver et payer</button>
+		{{ form_end(form) }}
+		{% if is_granted('ROLE_ADMIN') %}
+			<div class="mt-3">
+				<a href="{{ path('plan_new') }}" class="btn btn-secondary">Ajouter un nouveau forfait</a>
+			</div>
+		{% endif %}
+	</div>
 {% endblock %}
