--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                     {# <li class="nav-item"><a class="nav-link" href="{{ path('course_details_list') }}">Activités</a></li> #}
                     {# <li class="nav-item"><a class="nav-link" href="{{ path('event_list') }}">Événements</a></li> #}
                     <li class="nav-item"><a class="nav-link" href="{{ path('planning') }}">Planning</a></li>
-                    {# <li class="nav-item"><a class="nav-link" href="{{ path('calendar') }}">Réservation</a></li> #}
+                    <li class="nav-item"><a class="nav-link" href="{{ path('calendar') }}">Réservation</a></li>
                     {# <li class="nav-item"><a class="nav-link" href="/tarifs">Tarifs</a></li> #}
                     <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}">Contact</a></li>
                     {# <li class="nav-item"><a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a></li> #}
