--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,68 +1,125 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Bienvenue !{% endblock %}</title>
-    
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('styles/style.css') }}">
-    
-    {% block stylesheets %}{% endblock %}
-</head>
-<body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <img class="logo-img" src="{{ asset('images/logo2.jpg') }}" alt="AirStudio73">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="/">Accueil</a></li>
-                    {# <li class="nav-item"><a class="nav-link" href="{{ path('coach_list') }}">Coach</a></li> #}
-                    {# <li class="nav-item"><a class="nav-link" href="{{ path('course_details_list') }}">Activités</a></li> #}
-                    {# <li class="nav-item"><a class="nav-link" href="{{ path('event_list') }}">Événements</a></li> #}
-                    <li class="nav-item"><a class="nav-link" href="{{ path('planning') }}">Planning</a></li>
-                    {# <li class="nav-item"><a class="nav-link" href="{{ path('calendar') }}">Réservation</a></li> #}
-                    {# <li class="nav-item"><a class="nav-link" href="/tarifs">Tarifs</a></li> #}
-                    <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}">Contact</a></li>
-                    {# <li class="nav-item"><a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a></li> #}
-                    
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <li class="nav-item"><a class="nav-link text-danger" href="{{ path('course_list') }}">Cours</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger" href="{{ path('plan_list') }}">Forfaits</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger" href="{{ path('admin_client_list') }}">Clients</a></li>
-                    {% endif %}
-                </ul>
-                <ul class="navbar-nav">
-                    {% if app.user %}
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a></li>
-                    {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Se connecter</a></li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Bienvenue !
+			{% endblock %}
+		</title>
 
-    <div class="container p-2">
-        {% for message in app.flashes('success') %}
-            <div class="alert alert-success">{{ message }}</div>
-        {% endfor %}
-        {% for message in app.flashes('error') %}
-            <div class="alert alert-danger">{{ message }}</div>
-        {% endfor %}
-    </div>
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="{{ asset('styles/style.css') }}"> {% block stylesheets %}{% endblock %}
+		</head>
+		<body>
+			<div class="d-flex flex-column min-vh-100">
+				<nav class="navbar navbar-expand-md navbar-light bg-white">
+					<div class="container-fluid">
+						<a class="navbar-brand" href="/">
+							<img class="logo-img" src="{{ asset('images/logo2.jpg') }}" alt="AirStudio73">
+						</a>
+						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarNav">
+							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+								<li class="nav-item">
+									<a class="nav-link" href="/">Accueil</a>
+								</li>
+								{# <li class="nav-item"><a class="nav-link" href="{{ path('coach_list') }}">Coach</a></li> #}
+								{# <li class="nav-item"><a class="nav-link" href="{{ path('course_details_list') }}">Activités</a></li> #}
+								{# <li class="nav-item"><a class="nav-link" href="{{ path('event_list') }}">Événements</a></li> #}
+									<li class="nav-item"> <a class="nav-link" href="{{ path('planning') }}">Planning</a>
+								</li>
+								<li class="nav-item"><a class="nav-link" href="{{ path('calendar') }}">Réservation</a></li>
+								{# <li class="nav-item"><a class="nav-link" href="/tarifs">Tarifs</a></li> #}
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('contact') }}">Contact</a>
+								</li>
+								{# <li class="nav-item"><a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a></li> #}
 
-    {% block body %}{% endblock %}
+								{% if is_granted('ROLE_ADMIN') %}
+									<li class="nav-item">
+										<a class="nav-link text-danger" href="{{ path('course_list') }}">Cours</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-danger" href="{{ path('plan_list') }}">Forfaits</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-danger" href="{{ path('admin_client_list') }}">Clients</a>
+									</li>
+								{% endif %}
+							</ul>
+							<ul class="navbar-nav">
+								{% if app.user %}
+									<li class="nav-item">
+										<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+									</li>
+								{% else %}
+									<li class="nav-item">
+										<a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+									</li>
+								{% endif %}
+							</ul>
+						</div>
+					</div>
+				</nav>
 
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
-    {% block javascripts %}{% endblock %}
-</body>
-</html>
+				<div class="container p-2 flex-grow-1">
+					{% for message in app.flashes('success') %}
+						<div class="alert alert-success">{{ message }}</div>
+					{% endfor %}
+					{% for message in app.flashes('error') %}
+						<div class="alert alert-danger">{{ message }}</div>
+					{% endfor %}
+
+					{% block body %}{% endblock %}
+				</div>
+
+				<!-- Bouton Retour en haut -->
+				<a href="#" id="back-to-top" class="back-to-top">
+					▲ Retour en haut de page
+				</a>
+
+				<footer class="footer">
+					<nav>
+						<ul>
+							<li>
+								<a href="{{ path('reglement_interieur') }}">Règlement Intérieur</a>
+							</li>
+							<li>
+								<a href="{{ path('nos_cgv') }}">Nos CGV</a>
+							</li>
+						</ul>
+					</nav>
+					<p class="text-center">©2024 Tous droits réservés. AirStudio73 - Powered by Samuel MÉLINE</p>
+				</footer>
+			</div>
+
+			<!-- Bootstrap JS -->
+			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+			{% block javascripts %}
+        <script>
+            // Afficher le bouton lorsque l'utilisateur fait défiler vers le bas
+            window.onscroll = function() {
+                var backToTopButton = document.getElementById("back-to-top");
+                if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+                    backToTopButton.style.display = "block";
+                } else {
+                    backToTopButton.style.display = "none";
+                }
+            };
+
+            // Retourner en haut de la page en cliquant sur le bouton
+            document.getElementById("back-to-top").addEventListener("click", function(event) {
+                event.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth"
+                });
+            });
+        </script>
+{% endblock %}
+		</body>
+	</html>
