--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-        <div class="col-md-12 w-50 mx-auto">
+        <div class="col-md-12 w-50 mx-auto mt-5">
             <div class="card">
                 <div class="card-body">
                     <h1>Contactez-nous</h1>
