--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,15 +4,15 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-5">
+	<div class="container home">
 		<div class="jumbotron text-center p-4 w-75 mt-5">
 			<h1 class="display-4">Bienvenue sur notre site en construction</h1>
 			<p class="lead">Nous travaillons activement à la création de notre nouveau site web.</p>
 			<hr class="my-4">
-			<p>Les réservations seront bientôt disponnible, merci de ne pas réserver pour le moment :)
-			</p>
-			{# <p>Malgré cela, vous pouvez dès maintenant réserver vos cours via notre <a href="{{ path('calendar') }}"> calendrier en ligne.</a></p> #}
-			{# <a class="btn btn-primary btn-lg" href="{{ path('calendar') }}" role="button">Accéder au Calendrier et Réserver</a> #}
+			{# <p>Les réservations seront bientôt disponnible, merci de ne pas réserver pour le moment :) #}
+			{# </p> #}
+			<p>Malgré cela, vous pouvez dès maintenant réserver vos cours via notre <a class="reserve" href="{{ path('calendar') }}"> calendrier en ligne.</a></p>
+			<a class="btn btn-general btn-lg" href="{{ path('calendar') }}" role="button">Accéder au Calendrier et Réserver</a>
 			<p class="mt-4">Restez à l'écoute pour plus de fonctionnalités à venir bientôt !</p>
 		</div>
 	</div>
