--- a/templates/plan/list.html.twig
+++ b/templates/plan/list.html.twig
@@ -9,7 +9,7 @@
 					{% if is_granted('ROLE_ADMIN') %}
 						<a href="{{ path('plan_new') }}" class="btn btn-success mb-3">Ajouter un nouveau forfait</a>
 					{% endif %}
-					<div class="list-group">
+					<div class="list-group content-scrollable">
 						{% set paymentModes = {1: 'Paiement comptant', 2: 'Paiement en 2 fois', 3: 'Paiement en 3 fois', 10: 'Paiement en 10 fois'} %}
 						{% for plan in plans %}
 							<div class="list-group-item mb-3">
