--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,13 +4,11 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-5">
+	<div class="container connexion">
 		<div class="row justify-content-center">
 			<div class="col-md-6">
 				<div class="card">
-					<div class="card-header">
-						<h1 class="card-title">Connexion</h1>
-					</div>
+					<h1 class="card-title">Connexion</h1>
 					<div class="card-body">
 						<form method="post">
 							{% if error %}
@@ -41,12 +39,12 @@
 								<label for="_remember_me" class="form-check-label">Se souvenir de moi</label>
 							</div>
 
-							<button class="btn btn-lg btn-primary btn-block" type="submit">
+							<button class="btn btn-lg btn-general btn-block" type="submit">
 								Se connecter
 							</button>
 						</form>
 						<div class="text-center mt-3">
-							<a href="{{ path('app_register') }}">Pas encore de compte ? Inscris-toi !</a>
+							<a class="reserve" href="{{ path('app_register') }}">Pas encore de compte ? Inscris-toi !</a>
 						</div>
 					</div>
 				</div>
